src/objects/Study_Questionnaire_Response__c.object
<CustomObject>
    <fields>
        <fullName>Comments_Response__c</fullName>
        <label>Comments Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Response__c</fullName>
        <label>Date Response</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <formula>Question__r.Question_Text_TF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Questions__c</referenceTo>
        <relationshipLabel>PANG Study Questionnaire Responses</relationshipLabel>
        <relationshipName>Study_Questionnaire_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Response</label>
        <referenceTo>Question_Option__c</referenceTo>
        <relationshipLabel>PANG Study Questionnaire Responses</relationshipLabel>
        <relationshipName>Study_Questionnaire_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study_Questionnaire_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Questionnaire ID</label>
        <referenceTo>Study_Questionnaire__c</referenceTo>
        <relationshipLabel>PANG Study Questionnaire Responses</relationshipLabel>
        <relationshipName>Study_Questionnaire_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Study Questionnaire Response</label>
    <nameField>
        <displayFormat>QSO-{000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Questionnaire Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>